# AtivOS

./: .gitignore  README.md  install-all.sh
apps/: install-ativos-apps.sh
branding/: install-ativos-branding.sh
branding/ativos-assets/: ascii.txt
desktop/: install-ativos-gnome.sh  install-ativos-kde.sh  lib-yay-limine-bootstrap.sh
gpu-drivers/: install-ativos-gpu-drivers.sh
iso-install/: ativos-chroot-setup.sh  ativos-install.sh
lib/: lib-add-cmdline-param.sh  lib-find-limine-conf.sh
oobe/: CMakeLists.txt  ativos-oobe-launch  ativos-set-avatar  ativos-system-config  install-ativos-oobe.sh  main.cpp  oobebackend.cpp  oobebackend.h  org.ativos.oobe.desktop  org.ativos.oobe.setavatar.policy  org.ativos.oobe.systemconfig.policy
oobe/assets/avatars/: README.md
oobe/qml/: Main.qml  Theme.qml
oobe/qml/components/: PillButton.qml
oobe/qml/pages/: AccountPage.qml  AppearancePage.qml  AppsPage.qml  AvatarPage.qml  FinishPage.qml  GamingPage.qml  LanguagePage.qml  NetworkPage.qml  PrivacyPage.qml  RegionPage.qml  WelcomePage.qml
package-manager/: ativ  setup-ativ.sh
performance/: install-ativos-performance.sh
performance/files/: 00-ativos-types.rules  10-ativos-rules.rules  60-ativos-ioschedulers.rules  61-ativos-zram-swap.rules  99-ativos-performance.conf  MangoHud.conf  ativos-reflector.conf  gamemode.ini  scx_loader.toml  zram-generator.conf
plymouth-theme/: install-ativos-plymouth.sh
plymouth-theme/theme/: ativos.plymouth  ativos.script
shell/: install-ativos-shell.sh
shell/files/: config.fish
